# tinyiothub

./: .dockerignore  .editorconfig  .env.example  .gitattributes  .gitignore  AGENTS.md  ARCHITECTURE_CONTRACT.md  ARCHITECTURE_HARNESS.md  ARCHITECTURE_LINTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  DOCKER.md  Dockerfile  Dockerfile.dev  FEATURE_PARITY.md  FRONTEND_LAYERING_GUIDE.md  Justfile  README.md  SHARED_AUDIT.md  TODOS.md  app_settings.example.toml  clippy.toml  deny.toml  docker-compose.local.yml  docker-compose.yml  rustfmt.toml
api/: .dockerignore  Cargo.toml  Dockerfile  README.md  app_settings.example.toml  rustc-ice-2025-06-16T04_15_01-29376.txt  rustc-ice-2025-06-18T02_38_33-15388.txt  tinyiothub_development.sqlite
api/.cargo/: config-harmonyos.toml  config.toml
api/config/: development.yaml  test.yaml
api/data/skills/: device-status.md  schedule-tasks.md  workspace-management.md
api/derive/: Cargo.toml
api/derive/src/: lib.rs
api/docs/: INIT.md
api/examples/: playground.rs
api/migration/src/: lib.rs  m20220101_000001_users.rs  m20250605_101407_apps.rs  m20250607_084035_tags.rs  m20250610_105058_create_thing_models.rs  m20250617_103012_tag_bindings.rs  m20250617_103958_devices.rs  m20250617_104259_device_properties.rs  m20250617_104446_device_events.rs  m20250617_104607_device_service_calls.rs  m20250617_104839_device_templates.rs  m20250618_021341_tenants.rs
api/migrations/: 20260106000002_rebuild_database_with_snake_case.sql  20260315000001_create_device_data_tables.sql  20260316000001_create_gateway_tables.sql  20260322000001_add_performance_indexes.sql  20260401000001_add_tenant_id_to_devices.sql  20260401000002_remove_organization_id_from_devices.sql  20260405074640_create_workspaces_table.sql  20260408000001_create_chat_tables.sql  20260409000001_add_workspace_id_for_mcp_tools.sql  20260410000002_add_agent_skills.sql  20260414102323_enhance_chat_sessions_for_repository.sql
api/plugins/notification/: dingtalk_example.toml  feishu_example.toml
api/plugins/protocol/: mqtt_example.toml
api/plugins/storage/: influxdb_example.toml
api/sql/: automations.sql
api/src/: app.rs  infrastructure_tests.rs  lib.rs  main.rs  prelude.rs
api/src/api/: README.md  mod.rs  tags.rs  websocket.rs
api/src/application/: cron.rs  cron_scheduler.rs  data_context.rs  data_server.rs  (+4 more)
cloud/: Cargo.toml
cloud/migrations/: 20260106000002_rebuild_database_with_snake_case.sql  20260108000001_create_device_template_tables.sql  20260110000001_create_device_traces_table.sql  20260312000001_create_jobs_tables.sql  20260313000001_create_saas_tenants.sql  20260314000001_create_auth_social_tables.sql  20260314000002_create_token_blacklist.sql  20260328000001_create_healing_executions_table.sql  20260329000001_fix_admin_password_hash.sql  20260406000001_create_batch_command_tables.sql  20260407000001_create_default_tenant_and_workspace.sql  20260408000001_create_chat_tables.sql  20260409000001_add_workspace_id_for_mcp_tools.sql  20260410000001_add_device_memory.sql  20260414102323_enhance_chat_sessions_for_repository.sql  20260414120000_create_agents_table.sql  20260418000002_create_cron_tables.sql  20260423000001_create_events_table.sql  20260423000002_create_device_templates_table.sql  20260425000001_create_missing_base_tables.sql  20260429000001_add_workspace_id_to_notification_tables.sql  20260506000001_users_phone_unique.sql  20260507000001_add_workspace_id_to_roles.sql  20260507000002_create_system_settings_table.sql  20260508000001_add_workspace_id_to_device_templates.sql  20260508000002_create_driver_installations.sql  20260508000003_create_workspace_driver_preferences.sql  20260511000001_add_gateway_fields_to_devices.sql  20260516044444_seed_builtin_templates.sql  20260517000001_create_chat_messages.sql  20260520000001_create_agent_memories.sql  20260528000001_create_workspace_resources.sql  20260529000001_knowledge_graph.sql  20260603000001_unify_resources.sql  20260604000001_simplify_resource_types.sql  20260605000001_fix_knowledge_fks.sql  20260606000001_add_resolution_type_to_device_alarms.sql  20260608000001_relax_alarm_rule_fks.sql  20260608000002_relax_alarm_rule_fks.sql  20260611000001_add_notification_config_to_alarm_rules.sql  (+7 more)
cloud/src/: lib.rs  main.rs  server.rs  test_utils.rs
crates/tinyiothub-ai/: Cargo.toml
crates/tinyiothub-core/: Cargo.toml
crates/tinyiothub-engine/: Cargo.toml
crates/tinyiothub-error/: Cargo.toml
crates/tinyiothub-macros/: Cargo.toml
crates/tinyiothub-memory/: Cargo.toml
crates/tinyiothub-metrics/: Cargo.toml
crates/tinyiothub-runtime/: Cargo.toml
crates/tinyiothub-storage/: Cargo.toml
crates/tinyiothub-web/: Cargo.toml
edge/: Cargo.toml
edge/src/: app_state.rs  config.rs  device_discovery.rs  lib.rs  main.rs  mqtt_client.rs  offline_storage.rs  pairing.rs  plugin_manager.rs  runtime.rs
edge/tests/: app_state_tests.rs  config_mgmt_tests.rs  config_tests.rs  device_tests.rs  driver_tests.rs  e2e_tests.rs  gateway_tests.rs  higher_services_tests.rs  http_tests.rs  offline_buffer_tests.rs
examples/bacnet-driver/: Cargo.toml  README.md  test_bacnet_driver.py
marketplace/: .dockerignore  Cargo.toml  Dockerfile  README.md
marketplace/drivers/: bacnet.json  index.json  opcua.json  snmp.json
marketplace/src/: cache.rs  download.rs  lib.rs  main.rs  registry.rs  service.rs  types.rs  verify.rs
marketplace/templates/: air_quality_sensor.json  conductivity_sensor.json  electric_meter.json  flow_meter.json  flow_switch.json  gas_sensor.json  hmi_panel.json  home-appliances.json  humidity_sensor.json  index.json  industrial.json  io_module.json  level_sensor.json  light_sensor.json  ph_sensor.json  plc_controller.json  pressure_sensor.json  smoke_detector.json  temperature_sensor.json  thermostat_controller.json  vfd_inverter.json  water_meter.json  wind_sensor.json
marketplace/tests/: integration_test.rs
mcp/: Cargo.toml  README.md  mcp_settings.toml.example
mcp/src/: client.rs  config.rs  main.rs  tests.rs
sdks/driver-sdk/: Cargo.toml  README.md
sdks/plugin-sdk/: Cargo.toml
(+2468 files in other folders)
