[workspace]
resolver = "3"
members = [
    "crates/*",
    "cloud",
    "edge",
    "marketplace",
    "cli",
    "plugins/*",
    "sdks/*",
]
exclude = [
    # Has its own [workspace] — cannot nest
    "vendor/onvif-rs",
    # Frontend is built separately (Node/Vite)
    "web",
]

[workspace.package]
version = "1.1.0"
edition = "2024"
authors = ["TinyIoTHub Team"]
license = "MIT"
repository = "https://github.com/Grong/tinyiothub"

[workspace.dependencies]
# Core async runtime
tokio = { version = "1.22.0", features = ["macros", "rt-multi-thread", "net", "io-util", "time", "fs", "signal"] }

# Web framework
axum = { version = "0.8", default-features = false, features = ["http1", "json", "matched-path", "original-uri", "query", "tokio", "tower-log", "macros"] }
tower = { version = "0.5", features = ["util"] }
tower-http = { version = "0.6", features = ["fs", "cors", "trace"] }
headers = "0.4"

# Serialization
serde = { version = "^1.0", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }

# Logging
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["fmt", "env-filter"] }
tracing-appender = "0.2"

# System
num_cpus = "1.16"

# Database
sqlx = { version = "0.9.0-alpha.1", features = ["runtime-tokio", "sqlite", "chrono", "uuid"] }

# Storage plugins
tokio-postgres = "0.7"
influxdb2 = "0.4"

# MQTT
rumqttc = { version = "0.24", default-features = false, features = ["use-rustls"] }

# JWT
jwt-simple = { version = "0.12", default-features = false, features = ["pure-rust"] }

# HTTP client
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream"] }

# Regex
regex = "1.10"

# Scheduling
cron = "0.12"
tokio-cron-scheduler = "0.13"

# Config
toml = "0.8"
config = { version = "0.14", default-features = false, features = ["toml"] }

# Serial
serialport = "4.2"

# Random
rand = "0.8"

# Async utilities
futures = "0.3"
futures-util = "0.3"

# Collections
dashmap = "5.5"
itertools = "0.12"

# Sync primitives
parking_lot = "0.12"

# Cache
moka = { version = "0.12", features = ["sync"] }

# System info
sysinfo = "0.30"

# Retry
backoff = "0.4"

# Memory
elsa = "1.10"

# Redis
redis = { version = "0.25", features = ["tokio-comp", "connection-manager"] }

# Dynamic loading
libloading = "0.8"

# Utilities
uuid = { version = "1.6", features = ["v4", "serde"] }
async-trait = "0.1"
once_cell = "1.19"
lazy_static = "1.4"
anyhow = "1.0"
thiserror = "1.0"

# SSE
async-stream = "0.3"
tokio-stream = "0.1"

# WebSocket
tokio-tungstenite = { version = "0.26", features = ["native-tls"] }
bytes = "1"
http = "1"

# Encoding
base64 = "0.21"
urlencoding = "2.1"

# Crypto
aes-gcm = "0.10"
sha2 = "0.10"
hmac = "0.12"
sha1 = "0.10"
subtle = "2.5"
hex = "0.4"

# Password hashing
bcrypt = "0.15"

# Validation
validator = { version = "0.16", features = ["derive"] }

# Performance
smallvec = "1.11"

# Dev dependencies (shared)
proptest = "1.4"
tempfile = "3.8"
criterion = { version = "0.5", features = ["async_tokio"] }

# Workspace crates (path deps — not published yet)
tinyiothub-macros = { path = "crates/tinyiothub-macros" }
tinyiothub-core = { path = "crates/tinyiothub-core" }
tinyiothub-config = { path = "crates/tinyiothub-config" }
tinyiothub-engine = { path = "crates/tinyiothub-engine" }
tinyiothub-storage = { path = "crates/tinyiothub-storage" }
tinyiothub-plugin = { path = "crates/tinyiothub-plugin" }
tinyiothub-plugin-sdk = { path = "sdks/plugin-sdk" }
tinyiothub-metrics = { path = "crates/tinyiothub-metrics" }
tinyiothub-web = { path = "crates/tinyiothub-web" }

[profile.release]
opt-level = 0
lto = false

[profile.dev]
opt-level = 0
