[package]
name = "tinyiothub"
version = "1.1.0"
edition = "2021"

[workspace]
members = ["derive"]
exclude = []

[lib]
doctest = false

[[bin]]
name = "tinyiothub"
path = "src/main.rs"

[profile.release]
opt-level = 0 
lto = false

[dependencies]
# 核心异步运行时（完全兼容鸿蒙）
tokio = { version = "1.22.0", features = ["macros", "rt-multi-thread", "net", "io-util", "time", "fs", "signal"] }

# Web框架 - Axum替代Poem
axum = { version = "0.7", default-features = false, features = ["http1", "json", "matched-path", "original-uri", "query", "tokio", "tower-log", "macros"] }
tower = { version = "0.4", features = ["util"] }
tower-http = { version = "0.5", features = ["fs", "cors", "trace"] }
headers = "0.4"

# 序列化
serde = { version = "^1.0", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }

# 日志
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["fmt", "env-filter"] }
tracing-appender = "0.2"

# 系统信息
num_cpus = "1.16"

# 数据库
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "sqlite", "chrono", "uuid"] }

# 存储插件依赖
tokio-postgres = "0.7"
influxdb2 = "0.4"

# MQTT 客户端
rumqttc = { version = "0.24", default-features = false, features = ["use-rustls"] }

# JWT认证 - 使用 jwt-simple (纯 Rust 实现，不依赖 ring)
jwt-simple = { version = "0.12", default-features = false, features = ["pure-rust"] }

# 网络工具
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }

# 正则表达式
regex = "1.10"

# 任务调度
cron = "0.12"
tokio-cron-scheduler = "0.13"

# 配置文件解析
toml = "0.8"
config = { version = "0.14", default-features = false, features = ["toml"] }

# 串口通信（鸿蒙系统不支持）
serialport = { version = "4.2", optional = true }

# 随机数生成
rand = "0.8"

# 异步工具
futures = "0.3"
futures-util = "0.3"

# 集合工具
dashmap = "5.5"
itertools = "0.12"

# 同步原语
parking_lot = "0.12"

# 缓存
moka = { version = "0.12", features = ["sync"] }

# 系统信息
sysinfo = "0.30"

# 重试机制
backoff = "0.4"

# 内存管理
elsa = "1.10"

# 自定义宏 (如果存在)
tinyiothub_derive = { path = "./derive" }
tinyiothub-driver-sdk = { path = "../sdks/driver-sdk" }

# 动态加载
libloading = "0.8"

# 其他工具
uuid = { version = "1.6", features = ["v4", "serde"] }
async-trait = "0.1"
once_cell = "1.19"
lazy_static = "1.4"
anyhow = "1.0"
thiserror = "1.0"

# SSE 支持
async-stream = "0.3"
tokio-stream = "0.1"

# Base64 编码 (用于邮件认证)
base64 = "0.21"

# URL 编码 (用于第三方登录)
urlencoding = "2.1"

# 加密库 (用于事件内容加密)
aes-gcm = "0.10"
sha2 = "0.10"
hmac = "0.12"
subtle = "2.5"
hex = "0.4"

# 密码哈希
bcrypt = "0.15"

# 输入验证
validator = { version = "0.16", features = ["derive"] }

# 性能优化
smallvec = "1.11"



[features]
default = []
harmonyos = []
serial = ["serialport"]

[dev-dependencies]
proptest = "1.4"
tempfile = "3.8"

[lints.rust]
dead_code = "warn"
unused_imports = "warn"
unused_variables = "warn"
unused_mut = "warn"
non_snake_case = "warn"
