# DEPRECATED: This crate is replaced by the embedded MCP server in api/src/api/mcp/
# No longer maintained as of 2026-03-28. Phase 1 of Edge Intelligence Agent.

[package]
name = "tinyiothub-mcp"
version = "1.0.0"
edition = "2021"
description = "TinyIoTHub MCP Server - AI Agent 集成"

[dependencies]
# 异步运行时
tokio = { version = "1", features = ["full"] }

# HTTP 客户端
reqwest = { version = "0.12", features = ["json"] }

# 序列化
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# 日志
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# 配置
toml = "0.8"
anyhow = "1"

# 错误处理
thiserror = "1"

# MCP 协议 - JSON-RPC 核心库
jsonrpc-core = "18"

[dev-dependencies]
# 测试
tokio-test = "0.4"
mockito = "1"

[features]
default = []
