[package]
name = "tinyiothub-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Core types, traits and utilities for TinyIoTHub"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
thiserror = { workspace = true }
sqlx = { workspace = true, optional = true }
tinyiothub-error = { workspace = true }

[features]
default = []
sqlx = ["dep:sqlx", "tinyiothub-error/sqlx-dep"]

[dev-dependencies]
tokio = { workspace = true }
