[package]
name = "tinyiothub-engine"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Business logic engines for TinyIoTHub"

[dependencies]
tinyiothub-core = { workspace = true }

# Async runtime
tokio = { workspace = true, features = ["process"] }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Async trait
async-trait = { workspace = true }

# Error handling
thiserror = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
