[package]
name = "tinyiothub-engine"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Business logic engines for TinyIoTHub"

[dependencies]
tinyiothub-core = { workspace = true }
tinyiothub-macros = { workspace = true }
tinyiothub-plugin-sdk = { workspace = true }

# Async runtime
tokio = { workspace = true, features = ["process", "sync"] }

# Workspace crates
tinyiothub-storage = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Async trait
async-trait = { workspace = true }

# Error handling
thiserror = { workspace = true }

# Logging
tracing = { workspace = true }

# Collections
dashmap = { workspace = true }

# Dynamic loading
libloading = { workspace = true }

# Random
rand = { workspace = true }

# Serial (optional)
serialport = { workspace = true, optional = true }

# Caching
moka = { workspace = true }

# Utilities
once_cell = { workspace = true }

# Sync primitives
parking_lot = { workspace = true }

# Date/time
chrono = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
