[package]
name = "tinyiothub-error"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Unified error types for TinyIoTHub"

[dependencies]
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sqlx = { workspace = true, optional = true }

[features]
default = []
sqlx-dep = ["sqlx"]
