[package]
name = "tinyiothub-macros"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Procedural macros for TinyIoTHub"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = "1.0.90"
serde_json = "1.0"
serde_qs = "0.9"
