[package]
name = "tinyiothub-memory"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Agent memory persistence — SqliteAgentMemoryRepository + embedding layer"

[dependencies]
tinyiothub-core = { path = "../tinyiothub-core" }
tinyiothub-storage = { path = "../tinyiothub-storage" }
serde = { workspace = true }
serde_json = { workspace = true }
sqlx = { workspace = true }
async-trait = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
