[package]
name = "tinyiothub-web"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "HTTP handlers and middleware for TinyIoTHub (placeholder)"

[dependencies]
tinyiothub-core = { workspace = true }
tinyiothub-runtime = { workspace = true }
tinyiothub-storage = { workspace = true }

# Web framework
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Async
async-trait = { workspace = true }
tokio = { workspace = true }

# Date/time
chrono = { workspace = true }

# Error handling
thiserror = { workspace = true }

# Logging
tracing = { workspace = true }

# HTTP headers (for Bearer token extraction)
headers = { workspace = true }
