[package]
name = "tinyiothub-driver-sdk"
version = "1.0.0"
edition = "2021"
authors = ["TinyIoTHub Team"]
description = "SDK for developing TinyIoTHub device drivers"
license = "MIT"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.6", features = ["v4"] }
chrono = "0.4"

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
